--- a/Lazapee/payroll_app/templates/payroll_app/home.html
+++ b/Lazapee/payroll_app/templates/payroll_app/home.html
@@ -18,8 +18,11 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 offset-2">
+        <div class="col-4 offset-2 mt-3 mb-3">
           <h1>Employees</h1>
+        </div>
+        <div class="col-3 offset-3">
+          <a href="{% url 'create_employee' %}" class="btn btn-secondary mt-4 mb-3">New Employee</a>
         </div>
       </div>
       <div class="row">
