--- a/Lazapee/payroll_app/templates/payroll_app/base.html
+++ b/Lazapee/payroll_app/templates/payroll_app/base.html
@@ -14,12 +14,13 @@
     <title>Payroll App</title>
   </head>
   <body>
+    {% block navbar %}
     <nav class="navbar navbar-expand-lg" style="background-color: #60b5ff">
       <div class="container-fluid">
         <a href="" class="navbar-brand navbar-item" style="text-decoration: none; color: #ffecdb">Lazapee</a>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" style="color: #ffecdb" href="#">Employee</a>
+            <a class="nav-link" style="color: #ffecdb" href="{% url 'home' %}">Employee</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: #ffecdb" href="#">Payslips</a>
@@ -27,6 +28,7 @@
         </ul>
       </div>
     </nav>
+    {% endblock %}
 
     {% block content %} {% endblock %}
 
