--- a/Lazapee/payroll_app/templates/payroll_app/home.html
+++ b/Lazapee/payroll_app/templates/payroll_app/home.html
@@ -1,68 +1,50 @@
-{% extends 'payroll_app/base.html' %} {% load static %}
+{% extends 'payroll_app/base.html' %} {% load static %} {% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    {% block content %}
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-4 offset-2 mt-3 mb-3">
-          <h1>Employees</h1>
-        </div>
-        <div class="col-3 offset-3">
-          <a href="{% url 'create_employee' %}" class="btn btn-secondary mt-4 mb-3">New Employee</a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-8 offset-2">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th class="table-dark" scope="col">Name</th>
-                <th class="table-dark" scope="col">ID Number</th>
-                <th class="table-dark" scope="col">Rate</th>
-                <th class="table-dark" scope="col">Allowance</th>
-                <th class="table-dark" scope="col">Overtime</th>
-                <th class="table-dark" scope="col">Options</th>
-                <th class="table-dark" scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for e in employee %}
-              <tr>
-                <td><a href="" style="color: cornflowerblue; text-decoration: none">{{ e.name }}</a></td>
-                <td>{{ e.id_number }}</td>
-                <td>{{ e.rate }}</td>
-                <td>{{ e.allowance }}</td>
-                <td>{{ e.overtime_pay }}</td>
-                <td>
-                  <a href="{% url 'update_employee' pk=e.pk %}" class="btn btn-primary">Update</a>
-                  <a href="" class="btn btn-danger">Delete</a>
-                  <input type="text" class="form-control mt-2" placeholder="Overtime Hours" />
-                </td>
-                <td>
-                  <a href="" class="btn btn-success mt-5">Add Overtime</a>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-4 offset-2 mt-3 mb-3">
+      <h1>Employees</h1>
     </div>
+    <div class="col-3 offset-3">
+      <a href="{% url 'create_employee' %}" class="btn btn-secondary mt-4 mb-3">New Employee</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th class="table-dark" scope="col">Name</th>
+            <th class="table-dark" scope="col">ID Number</th>
+            <th class="table-dark" scope="col">Rate</th>
+            <th class="table-dark" scope="col">Allowance</th>
+            <th class="table-dark" scope="col">Overtime</th>
+            <th class="table-dark" scope="col">Options</th>
+            <th class="table-dark" scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for e in employee %}
+          <tr>
+            <td><a href="" style="color: cornflowerblue; text-decoration: none">{{ e.name }}</a></td>
+            <td>{{ e.id_number }}</td>
+            <td>{{ e.rate }}</td>
+            <td>{{ e.allowance }}</td>
+            <td>{{ e.overtime_pay }}</td>
+            <td>
+              <a href="{% url 'update_employee' pk=e.pk %}" class="btn btn-primary">Update</a>
+              <a href="{% url 'delete_employee' pk=e.pk %}" class="btn btn-danger">Delete</a>
+              <input type="text" class="form-control mt-2" placeholder="Overtime Hours" />
+            </td>
+            <td>
+              <a href="" class="btn btn-success mt-5">Add Overtime</a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
-    {% endblock %}
-  </body>
-</html>
+{% endblock %}
