I did letter e) Payslips Page

--- a/Lazapee/payroll_app/templates/payroll_app/base.html
+++ b/Lazapee/payroll_app/templates/payroll_app/base.html
@@ -23,7 +23,7 @@
             <a class="nav-link" style="color: #ffecdb" href="{% url 'home' %}">Employee</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #ffecdb" href="#">Payslips</a>
+            <a class="nav-link" style="color: #ffecdb" href="{% url 'payslips' %}">Payslips</a>
           </li>
         </ul>
       </div>
