added login and signup

--- a/Lazapee/payroll_app/templates/payroll_app/base.html
+++ b/Lazapee/payroll_app/templates/payroll_app/base.html
@@ -30,7 +30,8 @@
     </nav>
     {% endblock %}
 
-    {% block content %} {% endblock %}
+    {% block content %} 
+    {% endblock %}
 
     <footer
       class="footer fixed-bottom bg-custom"
