other sites only work on login now

--- a/Lazapee/payroll_app/templates/payroll_app/base.html
+++ b/Lazapee/payroll_app/templates/payroll_app/base.html
@@ -25,6 +25,9 @@
           <li class="nav-item">
             <a class="nav-link" style="color: #ffecdb" href="{% url 'payslips' %}">Payslips</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: #ffecdb" href="{% url 'logout' %}">Logout</a>
+          </li>
         </ul>
       </div>
     </nav>
