Added View Payslips
- New view
- New url
- 2 new templates

--- a/Lazapee/payroll_app/templates/payroll_app/payslips.html
+++ b/Lazapee/payroll_app/templates/payroll_app/payslips.html
@@ -75,7 +75,7 @@
                 <td>{{ p.getPay_cycle }}</td>
                 <td>{{ p.getTotal_pay }}</td>
                 <td>
-                    <a href="" class="btn btn-info">View</a>
+                    <a href="{% url 'viewslip' p.pk %}" class="btn btn-info">View</a>
                 </td>
             </tr>
         {% endfor %}
