--- a/Lazapee/payroll_app/templates/payroll_app/update_employee.html
+++ b/Lazapee/payroll_app/templates/payroll_app/update_employee.html
@@ -10,10 +10,10 @@
     {% block content %}
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 offset-4 mt-5">
+        <div class="col-4 offset-4 mt-3">
           <div class="card">
             <div class="card-header text-center" style="font-family: 'Gill Sans'">
-              <h1>Update Employee</h1>
+              <h1>Employee</h1>
             </div>
             <div class="card-body" style="font-family: 'Gill Sans'">
               <h1>Name: {{ e.name }}</h1>
